# burn_emulator

./: .gitignore  README.md  main.py  pyproject.toml
configs/basemax_1440/: baseline_test.yaml  circle.yaml  legalmax_test.yaml  train.yaml
configs/basemax_1920/: baseline_test.yaml  circle.yaml  legalmax_test.yaml  train.yaml
configs/basemax_2400/: baseline_test.yaml  legalmax_test.yaml  train.yaml  unet.yaml
configs/basemax_480/: baseline_test.yaml  iters2_baseline.yaml  iters2_legalmax.yaml  legalmax_test.yaml  test.yaml  train.yaml  unet.yaml
configs/basemax_480/s1_baseline/: 1_test.yaml  2_test.yaml  3_test.yaml  4_test.yaml  5_test.yaml
configs/basemax_480/s1_legalmax/: 1_test.yaml  2_test.yaml  3_test.yaml  4_test.yaml  5_test.yaml
configs/basemax_480/s2_baseline/: 10_test.yaml  1_test.yaml  2_test.yaml  3_test.yaml  4_test.yaml  5_test.yaml  6_test.yaml  7_test.yaml  8_test.yaml  9_test.yaml
configs/basemax_480/s2_legalmax/: 10_test.yaml  1_test.yaml  2_test.yaml  3_test.yaml  4_test.yaml  5_test.yaml  6_test.yaml  7_test.yaml  8_test.yaml  9_test.yaml
configs/basemax_960/: baseline_test.yaml  circle.yaml  legalmax_test.yaml  train.yaml  unet.yaml
configs/basemax_all/: baseline_test.yaml  circle.yaml  legalmax_test.yaml  test.yaml  train.yaml  unet.yaml
data/: stats.yaml
data/configs/baseline/: model.yaml  train.yaml
data/configs/basemax_1440/: baseline_test.yaml  legalmax_test.yaml  test.yaml  train.yaml  unet.yaml
data/configs/basemax_1920/: baseline_test.yaml  legalmax_test.yaml  train.yaml  unet.yaml
data/configs/basemax_2400/: baseline_test.yaml  circle.yaml  legalmax_test.yaml  train.yaml
data/configs/basemax_480/: baseline_test.yaml  circle.yaml  gnn.yaml  legalmax_test.yaml  train.yaml
data/configs/basemax_720/: circle.yaml  train.yaml  unet.yaml
data/configs/basemax_960/: baseline_test.yaml  legalmax_test.yaml  train.yaml
docker/: Dockerfile.run
slurm/: test_circle_iter.slurm  test_cnns.slurm  test_test.slurm  train_cnns.slurm  train_gnn_480.slurm  train_test.slurm
src/burn_emulator/: constants.py  criterions.py  datasets.py  main.py  package.py  run.py  test.py  train.py  utils.py
(+18 files in other folders)
