[project]
name = "burn_emulator"
version = "0.1.0"
description = "A quick and dirty DL training repo for burn spread."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
burn_emulator = "burn_emulator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/burn_emulator"]

[tool.setuptools.packages.find]
where = ["src"]
