[project]
name = "burn-emulator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.4",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "torch>=2.13.0",
    "torch-geometric>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.28.0",
]

[project.scripts]
burn_emulator = "burn_emulator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burn_emulator"]
